# aspis

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml  lint.yml
aspis/common/: __init__.py  add.py  add_index.py  add_index_right.py  adjust.py  all.py  all_pass.py  always.py  any_pass.py  aperture.py  apply.py  apply_spec.py  apply_to.py  assoc.py  compose.py  curry.py  divide.py  gt.py  gte.py  multiply.py  pipe.py  prop.py  prop_eq.py
aspis/internal/: __init__.py  eager_partial.py  utils.py
aspis/internal/errors/: arity_error.py
docs/source/: aspis.common.rst  aspis.internal.errors.rst  aspis.internal.rst  aspis.rst  conf.py  index.rst  modules.rst
tests/common/: test_add.py  test_add_index.py  test_add_index_right.py  test_adjust.py  test_all.py  test_all_pass.py  test_always.py  test_any.py  test_any_pass.py  test_aperture.py  test_apply_spec.py  test_apply_to.py  test_assoc.py  test_compose.py  test_curry.py  test_divide.py  test_equals.py  test_flip.py  test_gt.py  test_gte.py  test_identity.py  test_multiply.py  test_pipe.py  test_prop.py  test_prop_eq.py
tests/internal/: test_eager_partial.py  test_utils.py
tests/internal/errors/: test_arity_error.py
