[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aspis"
version = "0.3.0"
description = "A functional programming library for Python"
authors = [
  {name = "BriHan", email="brihan.tech@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[project.urls]
homepage = "https://github.com/brihan/aspis"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "tests.py", "test.py"]
python_functions = ["test_*"]
pythonpath = ["."]

[project.optional-dependencies]
dev = [
  "black==24.10.0", 
  "flake8==7.1.1", 
  "flake8-import-order==0.18.2", 
  "pytest==8.3.3", 
  "sphinx==8.1.3", 
  "sphinx_rtd_theme==3.0.2",
  "twine==5.1.1"
]

test = [
  "flake8==7.1.1", 
  "flake8-import-order==0.18.2", 
  "pytest==8.3.3", 
]
